--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a>this is ass's home</a>
-    <img src="ass.jpeg" width="300" height="300">
+    <br/>
+    <img src="ass.jpeg">
 </body>
 </html>
