--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>MyHome</title>
 </head>
 <body>
+    <a name="5F"></a>
     <a>this is ass's home</a>
+    <br/>
+    <a href="https://www.baidu.com" >访问百度<a/>
     <br/>
     <img src="ass.jpeg">
     <br/>
-    <a href="https://www.baidu.com" >访问百度<a/>
+    <a href="#5F">回到顶部</a> 
+    
 </body>
 </html>
