--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <img src="https://bmob-cdn-23299.b0.upaiyun.com/2019/01/05/a4c1029c40013af380f7ccbe4a895e63.jpg">
     <br/>
     <a href="#5F">回到顶部</a> 
-    
+    <span id="runtime_span"></span>
+<script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
+Date("10/16/2018 5:22:00");
+Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;
+a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
+runtime_span.innerHTML="本站勉强运行: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();</script>
 </body>
 </html>
