--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MyHome</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
+<link rel="bookmark"href="/favicon.ico" />
 </head>
 <body>
     <a name="5F"></a>
