--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br/>
     <a href="https://www.baidu.com" >访问百度<a/>
     <br/>
-    <img src="ass.jpeg">
+    <img src="aass.jpeg">
     <br/>
     <img src="https://bmob-cdn-23299.b0.upaiyun.com/2019/01/05/a4c1029c40013af380f7ccbe4a895e63.jpg">
     <br/>
