--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <a name="5F"></a>
-    <h1>this is ass's home</h1>
-    <br/>
-    <span id="runtime_span"></span>
-    <br/>
-    <a href="https://www.baidu.com" >访问百度<a/>
-    <br/>
+    <center>
+        <h1>this is ass's home</h1>
+        <br/>
+        <span id="runtime_span"></span>
+        <br/>
+        <a href="https://www.baidu.com" >访问百度<a/>
+        <br/>
+            </center>
     <img src="aass.jpeg">
     <br/>
     <img src="https://bmob-cdn-23299.b0.upaiyun.com/2019/01/05/a4c1029c40013af380f7ccbe4a895e63.jpg">
