--- a/index.html
+++ b/index.html
@@ -6,6 +6,73 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MyHome</title>
     <link rel="shortcut icon" href="favicon.ico" />
+    <script type="text/javascript">
+    window.onload = function(){
+  var btn = document.getElementById('btn');
+  var timer = null;
+  var isTop = true;
+  //获取页面可视区高度
+  var clientHeight = document.documentElement.clientHeight;
+ console.log(clientHeight)
+   
+  //滚动条滚动时触发
+  window.onscroll = function() {
+  //显示回到顶部按钮
+    var osTop = document.documentElement.scrollTop || document.body.scrollTop;
+    if (osTop >= clientHeight) {
+      btn.style.display = "block";
+    } else {
+      btn.style.display = "none";
+    };
+  //回到顶部过程中用户滚动滚动条，停止定时器
+    if (!isTop) {
+      clearInterval(timer);
+    };
+    isTop = false;
+ 
+  };
+ 
+  btn.onclick = function() {
+    //设置定时器
+    timer = setInterval(function(){
+      //获取滚动条距离顶部高度
+      var osTop = document.documentElement.scrollTop || document.body.scrollTop;
+      console.log('osTop '+osTop);
+      var ispeed = Math.floor(-osTop / 7);
+       console.log('ispeed '+ispeed);
+      document.documentElement.scrollTop = document.body.scrollTop = osTop+ispeed;
+      //到达顶部，清除定时器
+      if (osTop == 0) {
+        clearInterval(timer);
+      };
+      isTop = true;
+       
+    },30);
+  };
+};
+    </script>
+    <stylesheet>
+         div.a{
+
+        width:300px;
+        height:10000px;
+    }
+    div.b{
+        width:100%;    
+        height:950px;
+        position:relative;
+        background:yellow;
+    }
+    #btn{
+        position: fixed;
+        bottom:20px;
+        right:20px;
+        width:100px;
+        height:100px;
+        border:1px solid red;
+        display: none;
+    }
+    </stylesheet>
 <link rel="bookmark"href="favicon.ico" />
 </head>
 <body>
@@ -22,7 +89,10 @@
     <img src="https://bmob-cdn-23299.b0.upaiyun.com/2019/01/05/a4c1029c40013af380f7ccbe4a895e63.jpg">
     <br/>
             </center>
-    <a href="#5F">回到顶部</a> 
+    <div class='a'>
+    <div class='b'></div>
+</div>
+<div id="btn">返回顶部</div>
     
 <script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new 
 Date("10/12/2018 5:22:00");
