--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   };
 };
     </script>
-    <stylesheet>
+    <style type="text/css">
          div.a{
 
         width:300px;
@@ -72,7 +72,7 @@
         border:1px solid red;
         display: none;
     }
-    </stylesheet>
+    </style>
 <link rel="bookmark"href="favicon.ico" />
 </head>
 <body>
